@@ -35,6 +35,6 @@ public class BackupRestoreWebUtils {
         if (bytes < unit) return bytes + " B";
         int exp = (int) (Math.log(bytes) / Math.log(unit));
         String pre = (si ? "kMGTPE" : "KMGTPE").charAt(exp - 1) + (si ? "" : "i");
-        return String.format("%.1f %sB", bytes / Math.pow(unit, exp), pre);
+        return "%.1f %sB".formatted(bytes / Math.pow(unit, exp), pre);
     }
 }
