@@ -14,7 +14,6 @@ import org.geoserver.platform.ServiceException;
  * Web Feature Service DropStoredQuery operation.
  *
  * @author Justin Deoliveira, OpenGeo
- * @version $Id$
  */
 public class DropStoredQuery {
 
@@ -43,7 +42,7 @@ public class DropStoredQuery {
         } else {
             WFSException exception = new WFSException(
                     request,
-                    String.format("Stored query %s does not exist.", request.getId()),
+                    "Stored query %s does not exist.".formatted(request.getId()),
                     ServiceException.INVALID_PARAMETER_VALUE);
             // CITE tests vagary, the XML uses "id" and KVP uses "STOREDQUERY_ID", the CITE tests
             // mandate "id"
